# app

./: README.md  conftest.py  pyproject.toml
config/: urls.py
config/settings/: common.py  local.py
core/models/: __init__.py
docker/: docker-compose.dev.yml  docker-compose.prod.yml
docker/django/: Dockerfile
post/: admin.py  filters.py  models.py  serializers.py  tests.py  urls.py  views.py
post/migrations/: 0001_initial.py
user/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
user/migrations/: 0001_initial.py
